# TelOS

./: .gitignore  README.md  package-lock.json  package.json
.claude/: launch.json
.claude/skills/telos-design/: SKILL.md
docs/: design-research.md  plan-bibliotheque.md  roadmap.md
prototype/: index.html  server.js
scripts/: dev-server.js  library.js  scan-steam.js
src/: app.js  audio.js  fonts-test.html  index.html  logo-test.html  styles.css
src-tauri/: Cargo.toml  config.local.example.json  tauri.conf.json
src-tauri/src/: art_downloader.rs  info_fetcher.rs  lib.rs  library.rs  main.rs  vdf.rs
src/fonts/: README.md
